# easy_prog

./: Cargo.toml  LICENSE  README.md  StdLib.md
.github/workflows/: rust.yml
examples/: ebnf.ep  file.ep  funcdecl.ep  hello_world2.ep  hello_world3.ep  simple_calculator.ep
examples/invalid/: different_brackets.ep  string.ep  string2.ep  unclosed_brackets.ep
src/: lexer.rs  lib.rs  main.rs  parser.excl  parser.rs  repl.rs  runner.rs  stdlib.rs  types.rs
tests/: lexer.rs  parser.rs  rustlang.rs  types.rs
tests/integration/: lexer.rs  main.rs  parser.rs  rustlang.rs  types.rs
